Add about and portfolio sections - missing functions

--- a/css/sass/base/_links.scss
+++ b/css/sass/base/_links.scss
@@ -12,6 +12,7 @@
   position: fixed;
   top: -56px;
   left: 0;
+  z-index: 999;
 
   &.visible {
     top: 0;
@@ -69,6 +70,7 @@ a {
 
   &.link {
     color: $brand-secondary;
+    display: inline-block;
 
     &:hover {
       color: $brand-primary;
@@ -120,12 +122,12 @@ a {
 
   li &.menu-item {
     color: $gray-12;
-    padding: 6px 0;
-    margin: 0 16px;
+    padding: 2px 0;
+    margin: 4px 16px;
     border-bottom: 2px solid;
     border-color: $black;
 
-    &:first-child {
+    &.first-menu-item {
       margin-left: 0;
     }
 
