--- a/css/grunt-project.css
+++ b/css/grunt-project.css
@@ -96,7 +96,7 @@ a:hover {
  */
 h1 {
   font-size: 32px;
-  margin: 16px 0;
+  margin: 16px 0 0;
 }
 
 /**
@@ -381,51 +381,211 @@ html {
   min-height: 100%;
 }
 
-h2 {
-  margin: 0 0 16px 0;
+#home h2 {
+  margin: 0 0 24px 0;
 }
-
-p {
-  margin: 8px 0;
+@media only screen and (min-width: 1280px) {
+  #home h2 {
+    margin: 0 0 32px 0;
+  }
 }
-
-a.link {
+#home p {
   margin: 16px 0;
 }
-
-.bw-bg {
+@media only screen and (min-width: 1280px) {
+  #home p {
+    margin: 24px 0;
+  }
+}
+#home a.link {
+  margin: 8px 0;
+}
+#home .logo-home {
+  width: 200px;
+  height: auto;
+}
+@media only screen and (min-width: 1280px) {
+  #home .logo-home {
+    width: 240px;
+  }
+}
+#home.bw-bg {
   background: url("../img/bw-rec.svg") no-repeat bottom;
   background-size: cover;
   height: 110vh;
 }
 @media only screen and (max-width: 500px) and (orientation: portrait) {
-  .bw-bg {
+  #home.bw-bg {
     background: none;
+    height: 105vh;
   }
 }
-
-.white-bg-mb {
+#home .white-bg-mb {
   background: url("../img/white-rec-mb.svg") no-repeat bottom;
   background-size: 100%;
   width: 100%;
   height: 60vh;
 }
 @media only screen and (min-width: 501px) {
-  .white-bg-mb {
+  #home .white-bg-mb {
     background: none;
     height: 100vh;
   }
 }
-
-.dark-bg-mb {
+#home .dark-bg-mb {
   background-color: #333333;
   width: 100%;
   height: 45vh;
 }
 @media only screen and (min-width: 501px) {
-  .dark-bg-mb {
+  #home .dark-bg-mb {
     background-color: transparent;
     height: 100vh;
+  }
+}
+
+#about h2 {
+  margin: 0 0 16px;
+}
+#about p {
+  margin: 8px 0;
+}
+#about a.button {
+  margin: 16px 0;
+}
+#about.gray-bg {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../img/gray-rec-mb.svg") no-repeat bottom;
+  background-size: cover;
+  min-height: 110vh;
+  position: relative;
+  bottom: 5vh;
+  padding: 72px 0 48px;
+}
+@media only screen and (min-width: 501px) {
+  #about.gray-bg {
+    background-image: url("../img/gray-rec.svg");
+    bottom: 10vh;
+  }
+}
+@media only screen and (min-width: 768px) {
+  #about.gray-bg {
+    padding: 0;
+  }
+}
+#about .credential .avatar {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 64px;
+  height: 64px;
+  border-radius: 32px;
+  margin-right: 16px;
+}
+#about .credential h3, #about .credential h4 {
+  margin: 0;
+}
+#about .credential p {
+  margin: 4px 0 0;
+}
+#about .social-items {
+  margin: 24px 0 16px;
+}
+#about .social-items a.button {
+  padding: 6px;
+  margin: 0 16px 0 0;
+}
+@media only screen and (min-width: 768px) {
+  #about .social-items {
+    margin-bottom: 24px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #about .social-items {
+    margin-bottom: 32px;
+  }
+}
+#about .family-img {
+  max-width: 480px;
+  display: none;
+  margin-left: 32px;
+  padding-top: 8px;
+}
+#about .family-img img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+@media only screen and (min-width: 768px) {
+  #about .family-img {
+    display: block;
+  }
+}
+
+.white-bg {
+  min-height: 100vh;
+  position: relative;
+  bottom: 10vh;
+}
+
+#portfolio h3, #portfolio h4 {
+  margin: 32px 0 0;
+}
+@media only screen and (min-width: 501px) {
+  #portfolio h3, #portfolio h4 {
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #portfolio h3, #portfolio h4 {
+    margin: 0 0 8px;
+  }
+}
+#portfolio a.button {
+  margin: 8px 0;
+}
+@media only screen and (min-width: 1024px) {
+  #portfolio a.button {
+    margin: 16px 0;
+  }
+}
+#portfolio a.flex-50 {
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  margin-right: 0;
+}
+#portfolio a.flex-50 img {
+  width: 100%;
+  height: auto;
+  max-height: 224px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+@media only screen and (max-width: 767px) and (orientation: landscape) {
+  #portfolio a.flex-50 img {
+    max-height: 160px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  #portfolio a.flex-50 img {
+    max-height: 300px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  #portfolio a.flex-50 img {
+    max-height: 360px;
+  }
+}
+@media only screen and (min-width: 501px) {
+  #portfolio a.flex-50 {
+    margin-right: 24px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #portfolio a.flex-50 {
+    margin-right: 32px;
   }
 }
 
@@ -450,6 +610,10 @@ a.link {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
   }
 }
 
@@ -468,6 +632,64 @@ a.link {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+}
+
+.flex-25 {
+  -webkit-box-flex: 0.25;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 0.25;
+  /* OLD - Firefox 19- */
+  width: 25%;
+  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 0.25;
+  /* Chrome */
+  -ms-flex: 0.25;
+  /* IE 10 */
+  flex: 0.25;
+}
+
+.flex-50 {
+  -webkit-box-flex: 0.5;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 0.5;
+  /* OLD - Firefox 19- */
+  width: 50%;
+  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 0.5;
+  /* Chrome */
+  -ms-flex: 0.5;
+  /* IE 10 */
+  flex: 0.5;
+}
+
+.flex-75 {
+  -webkit-box-flex: 0.75;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 0.75;
+  /* OLD - Firefox 19- */
+  width: 75%;
+  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 0.75;
+  /* Chrome */
+  -ms-flex: 0.75;
+  /* IE 10 */
+  flex: 0.75;
+}
+
+@media only screen and (max-width: 767px) {
+  .mobile-flex-1 {
+    -webkit-box-flex: 1;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    -moz-box-flex: 1;
+    /* OLD - Firefox 19- */
+    width: 100%;
+    /* For old syntax, otherwise collapses. */
+    -webkit-flex: 1;
+    /* Chrome */
+    -ms-flex: 1;
+    /* IE 10 */
+    flex: 1;
+  }
 }
 
 .space-between {
@@ -510,23 +732,28 @@ a.link {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1152px;
   margin: 0 auto;
   padding: 0 32px;
 }
-@media only screen and (min-width: 1024px) and (max-width: 1279px) and (orientation: landscape) {
+@media only screen and (min-width: 1024px) {
   .container {
     padding: 0 64px;
-  }
-}
-@media only screen and (min-width: 1280px) {
-  .container {
-    padding: 0;
   }
 }
 @media only screen and (max-width: 767px) and (orientation: landscape) {
   .container.home-block {
     padding: 0 16px;
+  }
+}
+@media only screen and (min-width: 960px) and (max-width: 1023px) and (orientation: landscape) {
+  .container.home-block {
+    padding: 0 48px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .container.home-block {
+    padding: 0 128px;
   }
 }
 
@@ -563,7 +790,7 @@ h3, h4 {
   font-family: "Avenir LT Std 85 Heavy", Helvetica, Arial, sans-serif;
   color: #333333;
   font-size: 18px;
-  line-height: 44px;
+  line-height: 24px;
 }
 @media only screen and (min-width: 768px) {
   h3, h4 {
@@ -614,6 +841,7 @@ a {
   position: fixed;
   top: -56px;
   left: 0;
+  z-index: 999;
 }
 .header.visible {
   top: 0;
@@ -687,6 +915,7 @@ a {
 }
 a.link {
   color: #00B8CC;
+  display: inline-block;
 }
 a.link:hover {
   color: #00E0F8;
@@ -732,12 +961,12 @@ li a.menu-button:hover {
 }
 li a.menu-item {
   color: #dddddd;
-  padding: 6px 0;
-  margin: 0 16px;
+  padding: 2px 0;
+  margin: 4px 16px;
   border-bottom: 2px solid;
   border-color: #333333;
 }
-li a.menu-item:first-child {
+li a.menu-item.first-menu-item {
   margin-left: 0;
 }
 li a.menu-item:hover {
