--- a/css/sass/base/_grid.scss
+++ b/css/sass/base/_grid.scss
@@ -10,6 +10,10 @@
   &.mobile-column {
     @include mobile-portrait {
       @include flex-column;
+      -webkit-justify-content: flex-start;
+      justify-content: flex-start;
+      -webkit-align-items: flex-start;
+      align-items: flex-start;
     }
   }
 }
@@ -17,6 +21,44 @@
 .column {
   @include flex;
   @include flex-column;
+}
+
+.flex-25 {
+  -webkit-box-flex: 0.25;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 0.25;         /* OLD - Firefox 19- */
+  width: 25%;                  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 0.25;          /* Chrome */
+  -ms-flex: 0.25;              /* IE 10 */
+  flex: 0.25;
+}
+
+.flex-50 {
+  -webkit-box-flex: 0.5;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 0.5;         /* OLD - Firefox 19- */
+  width: 50%;                  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 0.5;          /* Chrome */
+  -ms-flex: 0.5;              /* IE 10 */
+  flex: 0.5;
+}
+
+.flex-75 {
+  -webkit-box-flex: 0.75;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 0.75;         /* OLD - Firefox 19- */
+  width: 75%;                  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 0.75;          /* Chrome */
+  -ms-flex: 0.75;              /* IE 10 */
+  flex: 0.75;
+}
+
+.mobile-flex-1 {
+  @include mobile-down {
+    -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+    -moz-box-flex: 1;         /* OLD - Firefox 19- */
+    width: 100%;                  /* For old syntax, otherwise collapses. */
+    -webkit-flex: 1;          /* Chrome */
+    -ms-flex: 1;              /* IE 10 */
+    flex: 1;
+  }
 }
 
 .space-between {
@@ -59,20 +101,23 @@
 .container {
   @include box-border;
   width: 100%;
-  max-width: 1024px;
+  max-width: 1152px;
   margin: 0 auto;
   padding: 0 32px;
 
-  @include m-tablet-landscape {
+  @include m-tablet-up {
     padding: 0 64px;
-  }
-  @include desktop {
-    padding: 0;
   }
 
   &.home-block {
     @include mobile-landscape {
       padding: 0 16px;
+    }
+    @include s-tablet-landscape {
+      padding: 0 48px;
+    }
+    @include desktop {
+      padding: 0 128px;
     }
   }
 }
