--- a/css/sass/base/_mixins.scss
+++ b/css/sass/base/_mixins.scss
@@ -120,6 +120,12 @@
   }
 }
 
+@mixin mobile-down() {
+  @media only screen and (max-width: 767px) {
+    @content;
+  }
+}
+
 @mixin mobile-up() {
   @media only screen and (min-width: 768px) {
     @content;
@@ -133,7 +139,7 @@
 }
 
 @mixin s-tablet-landscape() {
-  @media only screen and (min-width: 768px) and (max-width: 1023px) and (orientation: landscape) {
+  @media only screen and (min-width: 960px) and (max-width: 1023px) and (orientation: landscape) {
     @content;
   }
 }
