--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -1,22 +1,22 @@
-<div class="header">
-  <div class="side-menu row">
+<header class="header">
+  <section class="side-menu row">
     <ul class="menu mobile-menu">
       <li>
         <a class="mdi mdi-menu mdi-24px menu-button" href="#" alt="Raoni Caselli on Behance"></a>
       </li>
     </ul>
     <img src="img/logo.svg" alt="Cas UX Design logo" class="logo" />
-  </div>
-  <div class="full-menu container space-between">
+  </section>
+  <nav class="full-menu container space-between">
     <ul class="menu">
       <li>
-        <a class="menu-item active" href="#home" alt="Home Cax UX Design">Home</a>
+        <a class="menu-item active first-menu-item" href="#home" alt="Home Cax UX Design">Home</a>
       </li>
       <li>
         <a class="menu-item" href="#about" alt="About Raoni Caselli">About me</a>
       </li>
       <li>
-        <a class="menu-item" href="#" alt="UX Portfolio">UX Portfolio</a>
+        <a class="menu-item" href="#portfolio" alt="UX Portfolio">UX Portfolio</a>
       </li>
       <li>
         <a class="menu-item" href="#" alt="Design Process">Design Process</a>
@@ -36,4 +36,5 @@
         <a class="mdi mdi-medium mdi-24px social-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
       </li>
     </ul>
-</div>
+  </nav>
+</header>
