--- a/css/grunt-project.css
+++ b/css/grunt-project.css
@@ -429,6 +429,7 @@ html {
 @media only screen and (min-width: 501px) {
   #home .white-bg-mb {
     background: none;
+    background-color: transparent;
     height: 100vh;
   }
 }
@@ -466,7 +467,8 @@ html {
 }
 @media only screen and (min-width: 501px) {
   #about.gray-bg {
-    background-image: url("../img/gray-rec.svg");
+    background: url("../img/gray-rec.svg") no-repeat bottom;
+    background-size: cover;
     bottom: 10vh;
   }
 }
