--- a/css/grunt-project.css
+++ b/css/grunt-project.css
@@ -422,7 +422,7 @@ html {
 }
 #home .white-bg-mb {
   background: url("../img/white-rec-mb.svg") no-repeat bottom;
-  background-size: 100%;
+  background-size: cover;
   width: 100%;
   height: 60vh;
 }
@@ -445,6 +445,36 @@ html {
   }
 }
 
+.gray-bg {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../img/gray-rec-mb.svg") no-repeat top;
+  background-size: cover;
+  min-height: 110vh;
+  position: relative;
+  bottom: 5vh;
+  padding: 72px 0 48px;
+}
+@media only screen and (min-width: 501px) {
+  .gray-bg {
+    background: url("../img/gray-rec.svg") no-repeat top;
+    background-size: cover;
+    bottom: 10vh;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .gray-bg {
+    padding: 0;
+  }
+}
+
+.white-bg {
+  min-height: 100vh;
+  position: relative;
+  bottom: 10vh;
+}
+
 #about h2 {
   margin: 0 0 16px;
 }
@@ -453,29 +483,6 @@ html {
 }
 #about a.button {
   margin: 16px 0;
-}
-#about.gray-bg {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: url("../img/gray-rec-mb.svg") no-repeat bottom;
-  background-size: cover;
-  min-height: 110vh;
-  position: relative;
-  bottom: 5vh;
-  padding: 72px 0 48px;
-}
-@media only screen and (min-width: 501px) {
-  #about.gray-bg {
-    background: url("../img/gray-rec.svg") no-repeat bottom;
-    background-size: cover;
-    bottom: 10vh;
-  }
-}
-@media only screen and (min-width: 768px) {
-  #about.gray-bg {
-    padding: 0;
-  }
 }
 #about .credential .avatar {
   -webkit-box-sizing: border-box;
@@ -524,12 +531,6 @@ html {
   #about .family-img {
     display: block;
   }
-}
-
-.white-bg {
-  min-height: 100vh;
-  position: relative;
-  bottom: 10vh;
 }
 
 #portfolio h3, #portfolio h4 {
