--- a/css/sass/base/_main.scss
+++ b/css/sass/base/_main.scss
@@ -51,7 +51,7 @@ html {
 
   .white-bg-mb {
     background: url('../img/white-rec-mb.svg') no-repeat bottom;
-    background-size: 100%;
+    background-size: cover;
     width: 100%;
     height: 60vh;
 
@@ -75,6 +75,32 @@ html {
 
 }
 
+.gray-bg {
+  @include box-border;
+  background: url('../img/gray-rec-mb.svg') no-repeat top;
+  background-size: cover;
+  min-height: 110vh;
+  position: relative;
+  bottom: 5vh;
+  padding: 72px 0 48px;
+
+  @include mobile-portrait-up {
+    background: url('../img/gray-rec.svg') no-repeat top;
+    background-size: cover;
+    bottom: 10vh;
+  }
+
+  @include mobile-up {
+    padding: 0;
+  }
+}
+
+.white-bg {
+  min-height: 100vh;
+  position: relative;
+  bottom: 10vh;
+}
+
 #about {
 
   h2 {
@@ -87,26 +113,6 @@ html {
 
   a.button {
     margin: 16px 0;
-  }
-
-  &.gray-bg {
-    @include box-border;
-    background: url('../img/gray-rec-mb.svg') no-repeat bottom;
-    background-size: cover;
-    min-height: 110vh;
-    position: relative;
-    bottom: 5vh;
-    padding: 72px 0 48px;
-
-    @include mobile-portrait-up {
-      background: url('../img/gray-rec.svg') no-repeat bottom;
-      background-size: cover;
-      bottom: 10vh;
-    }
-
-    @include mobile-up {
-      padding: 0;
-    }
   }
 
   .credential {
@@ -162,12 +168,6 @@ html {
 
   }
 
-}
-
-.white-bg {
-  min-height: 100vh;
-  position: relative;
-  bottom: 10vh;
 }
 
 #portfolio {
