--- a/css/grunt-project.css
+++ b/css/grunt-project.css
@@ -421,7 +421,7 @@ html {
   }
 }
 #home .white-bg-mb {
-  background: url("../img/white-rec-mb.svg") no-repeat bottom;
+  background: url("../img/light-rec.svg") no-repeat bottom;
   background-size: cover;
   width: 100%;
   height: 60vh;
@@ -451,30 +451,44 @@ html {
   box-sizing: border-box;
   background: url("../img/gray-rec-mb.svg") no-repeat top;
   background-size: cover;
+}
+@media only screen and (min-width: 501px) {
+  .gray-bg {
+    background: url("../img/gray-rec.svg") no-repeat top;
+    background-size: cover;
+  }
+}
+
+.white-bg {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../img/white-rec-mb.svg") no-repeat top;
+  background-size: cover;
+}
+@media only screen and (min-width: 501px) {
+  .white-bg {
+    background: url("../img/white-rec.svg") no-repeat top;
+    background-size: cover;
+  }
+}
+
+#about {
   min-height: 110vh;
   position: relative;
   bottom: 5vh;
   padding: 72px 0 48px;
 }
 @media only screen and (min-width: 501px) {
-  .gray-bg {
-    background: url("../img/gray-rec.svg") no-repeat top;
-    background-size: cover;
+  #about {
     bottom: 10vh;
   }
 }
 @media only screen and (min-width: 768px) {
-  .gray-bg {
+  #about {
     padding: 0;
   }
 }
-
-.white-bg {
-  min-height: 100vh;
-  position: relative;
-  bottom: 10vh;
-}
-
 #about h2 {
   margin: 0 0 16px;
 }
@@ -533,6 +547,22 @@ html {
   }
 }
 
+#portfolio {
+  min-height: 110vh;
+  position: relative;
+  bottom: 10vh;
+  padding: 72px 0 48px;
+}
+@media only screen and (min-width: 501px) {
+  #portfolio {
+    bottom: 20vh;
+  }
+}
+@media only screen and (min-width: 768px) {
+  #portfolio {
+    padding: 0;
+  }
+}
 #portfolio h3, #portfolio h4 {
   margin: 32px 0 0;
 }
