--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -5,7 +5,9 @@
         <a class="mdi mdi-menu mdi-24px menu-button" href="#" alt="Raoni Caselli on Behance"></a>
       </li>
     </ul>
-    <img src="img/logo.svg" alt="Cas UX Design logo" class="logo" />
+    <a href="#home" alt="Home run" class="logo">
+      <img src="img/logo.svg" alt="Cas UX Design logo">
+    </a>
   </section>
   <nav class="full-menu container space-between">
     <ul class="menu">
