--- a/html/templates/portfolio.html
+++ b/html/templates/portfolio.html
@@ -1,15 +1,36 @@
 <section id="portfolio" class="column flex-center align-center white-bg">
   <div class="container">
     <h2>UX Portfolio</h2>
-    <section class="row mobile-column space-between align-start">
-      <a href="#" class="flex-50 mobile-flex-1">
-        <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
-      </a>
-      <article class="flex-50 mobile-flex-1 column align-start">
-        <h3>Dolphin Surf App</h3>
-        <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-        <a href="#" class="button flat">Open project</a>
-      </article>
-    </section>
+    <div class="portfolio-slider" data-slideout-ignore>
+      <ul>
+
+        <li>
+          <section class="row mobile-column space-between align-start">
+            <a href="#" class="flex-50 mobile-flex-1">
+              <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+            </a>
+            <article class="flex-50 mobile-flex-1 column align-start">
+              <h3>Dolphin Surf App</h3>
+              <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
+              <a href="#" class="button flat">Open project</a>
+            </article>
+          </section>
+        </li>
+
+        <li>
+          <section class="row mobile-column space-between align-start">
+            <a href="#" class="flex-50 mobile-flex-1">
+              <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+            </a>
+            <article class="flex-50 mobile-flex-1 column align-start">
+              <h3>Healfies</h3>
+              <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
+              <a href="#" class="button flat">Open project</a>
+            </article>
+          </section>
+        </li>
+
+      </ul>
+    </div>
   </div>
 </section>
