--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -2,7 +2,7 @@
   <section class="side-menu row">
     <ul class="menu mobile-menu">
       <li>
-        <a class="mdi mdi-menu mdi-24px menu-button" href="#" alt="Raoni Caselli on Behance"></a>
+        <a class="mdi mdi-menu mdi-24px menu-button" alt="Raoni Caselli on Behance"></a>
       </li>
     </ul>
     <a href="#home" alt="Home run" class="logo">
@@ -21,10 +21,10 @@
         <a class="menu-item" href="#portfolio" alt="UX Portfolio">UX Portfolio</a>
       </li>
       <li>
-        <a class="menu-item" href="#" alt="Design Process">Design Process</a>
+        <a class="menu-item" href="#process" alt="Design Process">Design Process</a>
       </li>
       <li>
-        <a class="menu-item" href="#" alt="Contact me">Contact</a>
+        <a class="menu-item" href="#contact" alt="Contact me">Contact</a>
       </li>
     </ul>
     <ul class="menu">
@@ -35,7 +35,7 @@
         <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin"></a>
       </li>
       <li>
-        <a class="mdi mdi-medium mdi-24px social-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
+        <a class="mdi mdi-medium mdi-24px social-item last-menu-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
       </li>
     </ul>
   </nav>
