--- a/html/templates/sidemenu.html
+++ b/html/templates/sidemenu.html
@@ -11,10 +11,10 @@
         <a class="mobile-menu-item" href="#portfolio" alt="UX Portfolio">UX Portfolio</a>
       </li>
       <li>
-        <a class="mobile-menu-item" href="#" alt="Design Process">Design Process</a>
+        <a class="mobile-menu-item" href="#process" alt="Design Process">Design Process</a>
       </li>
       <li>
-        <a class="mobile-menu-item" href="#" alt="Contact me">Contact</a>
+        <a class="mobile-menu-item" href="#contact" alt="Contact me">Contact</a>
       </li>
     </ul>
     <ul class="row flex-center align-center">
