--- a/css/grunt-project.css
+++ b/css/grunt-project.css
@@ -246,6 +246,7 @@ legend {
  */
 button,
 input,
+#contact #contact-form textarea,
 select,
 textarea {
   font-family: inherit;
@@ -261,7 +262,8 @@ textarea {
  * the UA stylesheet.
  */
 button,
-input {
+input,
+#contact #contact-form textarea {
   line-height: normal;
 }
 
@@ -285,8 +287,12 @@ select {
  */
 button,
 html input[type="button"],
+html #contact #contact-form textarea[type="button"],
+#contact #contact-form html textarea[type="button"],
 input[type="reset"],
-input[type="submit"] {
+#contact #contact-form textarea[type="reset"],
+input[type="submit"],
+#contact #contact-form textarea[type="submit"] {
   -webkit-appearance: button;
   /* 2 */
   cursor: pointer;
@@ -297,7 +303,9 @@ input[type="submit"] {
  * Re-set default cursor for disabled elements.
  */
 button[disabled],
-html input[disabled] {
+html input[disabled],
+html #contact #contact-form textarea[disabled],
+#contact #contact-form html textarea[disabled] {
   cursor: default;
 }
 
@@ -305,8 +313,9 @@ html input[disabled] {
  * 1. Address box sizing set to `content-box` in IE 8/9.
  * 2. Remove excess padding in IE 8/9.
  */
-input[type="checkbox"],
-input[type="radio"] {
+input[type="checkbox"], #contact #contact-form textarea[type="checkbox"],
+input[type="radio"],
+#contact #contact-form textarea[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -318,7 +327,7 @@ input[type="radio"] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-input[type="search"] {
+input[type="search"], #contact #contact-form textarea[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   -moz-box-sizing: content-box;
@@ -331,8 +340,9 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type="search"]::-webkit-search-cancel-button, #contact #contact-form textarea[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration,
+#contact #contact-form textarea[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -340,7 +350,8 @@ input[type="search"]::-webkit-search-decoration {
  * Remove inner padding and border in Firefox 4+.
  */
 button::-moz-focus-inner,
-input::-moz-focus-inner {
+input::-moz-focus-inner,
+#contact #contact-form textarea::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
@@ -379,6 +390,154 @@ table {
 html {
   overflow-y: scroll;
   min-height: 100%;
+}
+
+main {
+  height: 520vh;
+}
+
+.gray-bg {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../img/gray-rec-mb.svg") no-repeat top;
+  background-size: cover;
+}
+@media only screen and (min-width: 501px) {
+  .gray-bg {
+    background: url("../img/gray-rec.svg") no-repeat top;
+    background-size: cover;
+  }
+}
+
+.white-bg {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: url("../img/white-rec-mb.svg") no-repeat top;
+  background-size: cover;
+}
+@media only screen and (min-width: 501px) {
+  .white-bg {
+    background: url("../img/white-rec.svg") no-repeat top;
+    background-size: cover;
+  }
+}
+
+.unslider-horizontal {
+  margin-bottom: 16px;
+}
+
+.slider-arrow {
+  position: absolute;
+  top: 160px;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  font-size: 32px;
+  line-height: 32px;
+  color: #00B8CC;
+  cursor: pointer;
+}
+@media only screen and (max-width: 767px) and (orientation: landscape) {
+  .slider-arrow {
+    top: 140px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .slider-arrow {
+    top: 220px;
+  }
+}
+.slider-arrow.next {
+  right: 0;
+}
+@media only screen and (min-width: 1024px) {
+  .slider-arrow.next {
+    right: 16px;
+  }
+}
+.slider-arrow.prev {
+  left: 0;
+}
+@media only screen and (min-width: 1024px) {
+  .slider-arrow.prev {
+    left: 16px;
+  }
+}
+
+.unslider-nav {
+  margin-top: 16px;
+}
+@media only screen and (min-width: 768px) {
+  .unslider-nav {
+    margin-top: 48px;
+  }
+}
+
+.slider-container {
+  position: relative;
+}
+.slider-container h2 {
+  margin: 0 0 32px;
+}
+.slider-container h3, .slider-container h4 {
+  margin: 32px 0 0;
+}
+@media only screen and (min-width: 501px) {
+  .slider-container h3, .slider-container h4 {
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .slider-container h3, .slider-container h4 {
+    margin: 0 0 8px;
+  }
+}
+.slider-container a.button {
+  margin: 8px 0;
+}
+@media only screen and (min-width: 1024px) {
+  .slider-container a.button {
+    margin: 16px 0;
+  }
+}
+.slider-container a.flex-50 {
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  margin-right: 0;
+}
+.slider-container a.flex-50 img {
+  width: 100%;
+  height: auto;
+  max-height: 224px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+@media only screen and (max-width: 767px) and (orientation: landscape) {
+  .slider-container a.flex-50 img {
+    max-height: 160px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .slider-container a.flex-50 img {
+    max-height: 300px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .slider-container a.flex-50 img {
+    max-height: 360px;
+  }
+}
+@media only screen and (min-width: 501px) {
+  .slider-container a.flex-50 {
+    margin-right: 24px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .slider-container a.flex-50 {
+    margin-right: 32px;
+  }
 }
 
 #home h2 {
@@ -442,34 +601,6 @@ html {
   #home .dark-bg-mb {
     background-color: transparent;
     height: 100vh;
-  }
-}
-
-.gray-bg {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: url("../img/gray-rec-mb.svg") no-repeat top;
-  background-size: cover;
-}
-@media only screen and (min-width: 501px) {
-  .gray-bg {
-    background: url("../img/gray-rec.svg") no-repeat top;
-    background-size: cover;
-  }
-}
-
-.white-bg {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background: url("../img/white-rec-mb.svg") no-repeat top;
-  background-size: cover;
-}
-@media only screen and (min-width: 501px) {
-  .white-bg {
-    background: url("../img/white-rec.svg") no-repeat top;
-    background-size: cover;
   }
 }
 
@@ -563,63 +694,94 @@ html {
     padding: 0;
   }
 }
-#portfolio h3, #portfolio h4 {
-  margin: 32px 0 0;
+
+#process {
+  min-height: 110vh;
+  position: relative;
+  bottom: 15vh;
+  padding: 72px 0 48px;
 }
 @media only screen and (min-width: 501px) {
-  #portfolio h3, #portfolio h4 {
-    margin: 0;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  #portfolio h3, #portfolio h4 {
-    margin: 0 0 8px;
-  }
-}
-#portfolio a.button {
-  margin: 8px 0;
-}
-@media only screen and (min-width: 1024px) {
-  #portfolio a.button {
-    margin: 16px 0;
-  }
-}
-#portfolio a.flex-50 {
-  border: 1px solid #dddddd;
-  border-radius: 4px;
-  margin-right: 0;
-}
-#portfolio a.flex-50 img {
-  width: 100%;
-  height: auto;
-  max-height: 224px;
-  object-fit: cover;
-  border-radius: 4px;
-}
-@media only screen and (max-width: 767px) and (orientation: landscape) {
-  #portfolio a.flex-50 img {
-    max-height: 160px;
+  #process {
+    bottom: 30vh;
   }
 }
 @media only screen and (min-width: 768px) {
-  #portfolio a.flex-50 img {
-    max-height: 300px;
+  #process {
+    padding: 0;
   }
 }
-@media only screen and (min-width: 1280px) {
-  #portfolio a.flex-50 img {
-    max-height: 360px;
-  }
+
+#contact {
+  min-height: 110vh;
+  position: relative;
+  bottom: 20vh;
+  padding: 72px 0 48px;
 }
 @media only screen and (min-width: 501px) {
-  #portfolio a.flex-50 {
-    margin-right: 24px;
+  #contact {
+    bottom: 40vh;
   }
 }
-@media only screen and (min-width: 1024px) {
-  #portfolio a.flex-50 {
-    margin-right: 32px;
+@media only screen and (min-width: 768px) {
+  #contact {
+    padding: 72px 0 0;
   }
+}
+#contact h2 {
+  margin: 0 0 16px;
+}
+@media only screen and (min-width: 1024px) {
+  #contact h2 {
+    margin: 0 0 24px;
+  }
+}
+#contact p {
+  margin: 8px 0;
+}
+#contact a.button {
+  margin: 16px 0;
+}
+#contact .contact-container {
+  max-width: 550px;
+}
+#contact #contact-form {
+  margin: 24px 0 0;
+}
+@media only screen and (min-width: 1024px) {
+  #contact #contact-form {
+    margin: 32px 0 0;
+  }
+}
+#contact #contact-form input, #contact #contact-form textarea {
+  height: 36px;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  width: 100%;
+  text-indent: 12px;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 24px;
+}
+#contact #contact-form textarea {
+  height: 72px;
+  padding: 6px 0;
+}
+#contact #contact-form ::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #9E9E9E;
+}
+#contact #contact-form ::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #9E9E9E;
+}
+#contact #contact-form :-ms-input-placeholder {
+  /* IE 10+ */
+  color: #9E9E9E;
+}
+#contact #contact-form :-moz-placeholder {
+  /* Firefox 18- */
+  color: #9E9E9E;
 }
 
 /*--------------------------------------*\
@@ -865,7 +1027,7 @@ a {
   position: fixed;
   top: 0;
   bottom: 0;
-  width: 320px;
+  width: 280px;
   min-height: 100vh;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
@@ -882,7 +1044,7 @@ a {
   position: relative;
   z-index: 1;
   will-change: transform;
-  background-color: #333333;
+  background-color: #ffffff;
   /* A background-color is required */
   min-height: 100vh;
 }
@@ -1029,6 +1191,7 @@ a {
   box-sizing: border-box;
   display: block;
   text-decoration: none;
+  cursor: pointer;
 }
 a.link {
   color: #00B8CC;
