--- a/css/sass/base/_main.scss
+++ b/css/sass/base/_main.scss
@@ -7,6 +7,142 @@ html {
 	min-height: 100%;
 }
 
+main {
+  height: 520vh;
+}
+
+.gray-bg {
+  @include box-border;
+  background: url('../img/gray-rec-mb.svg') no-repeat top;
+  background-size: cover;
+
+  @include mobile-portrait-up {
+    background: url('../img/gray-rec.svg') no-repeat top;
+    background-size: cover;
+  }
+}
+
+.white-bg {
+  @include box-border;
+  background: url('../img/white-rec-mb.svg') no-repeat top;
+  background-size: cover;
+
+  @include mobile-portrait-up {
+    background: url('../img/white-rec.svg') no-repeat top;
+    background-size: cover;
+  }
+}
+
+.unslider-horizontal {
+  margin-bottom: 16px;
+}
+
+.slider-arrow {
+  position: absolute;
+  top: 160px;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  font-size: 32px;
+  line-height: 32px;
+  color: $brand-secondary;
+  cursor: pointer;
+
+  @include mobile-landscape {
+    top: 140px;
+  }
+
+  @include mobile-up {
+    top: 220px;
+  }
+
+  &.next {
+    right: 0;
+
+    @include m-tablet-up {
+      right: 16px;
+    }
+  }
+  &.prev {
+    left: 0;
+
+    @include m-tablet-up {
+      left: 16px;
+    }
+  }
+
+}
+
+.unslider-nav {
+  margin-top: 16px;
+
+  @include mobile-up {
+    margin-top: 48px;
+  }
+}
+
+.slider-container {
+  position: relative;
+
+  h2 {
+    margin: 0 0 32px;
+  }
+
+  h3 {
+    margin: 32px 0 0;
+
+    @include mobile-portrait-up {
+      margin: 0;
+    }
+    @include m-tablet-up {
+      margin: 0 0 8px;
+    }
+  }
+
+  a.button {
+    margin: 8px 0;
+    @include m-tablet-up {
+      margin: 16px 0;
+    }
+  }
+
+  & a.flex-50 {
+    border: 1px solid #dddddd;
+    border-radius: $global-radius;
+    margin-right: 0;
+
+    img {
+      width: 100%;
+      height: auto;
+      max-height: 224px;
+      object-fit: cover;
+      border-radius: $global-radius;
+
+      @include mobile-landscape {
+        max-height: 160px;
+      }
+
+      @include mobile-up {
+        max-height: 300px;
+      }
+
+      @include desktop {
+        max-height: 360px;
+      }
+    }
+
+    @include mobile-portrait-up {
+      margin-right: 24px;
+    }
+
+    @include m-tablet-up {
+      margin-right: 32px;
+    }
+  }
+
+}
+
+
 #home {
 
   h2 {
@@ -73,28 +209,6 @@ html {
     }
   }
 
-}
-
-.gray-bg {
-  @include box-border;
-  background: url('../img/gray-rec-mb.svg') no-repeat top;
-  background-size: cover;
-
-  @include mobile-portrait-up {
-    background: url('../img/gray-rec.svg') no-repeat top;
-    background-size: cover;
-  }
-}
-
-.white-bg {
-  @include box-border;
-  background: url('../img/white-rec-mb.svg') no-repeat top;
-  background-size: cover;
-
-  @include mobile-portrait-up {
-    background: url('../img/white-rec.svg') no-repeat top;
-    background-size: cover;
-  }
 }
 
 #about {
@@ -192,55 +306,93 @@ html {
     padding: 0;
   }
 
-  h3 {
-    margin: 32px 0 0;
+}
 
-    @include mobile-portrait-up {
-      margin: 0;
-    }
+#process {
+  min-height: 110vh;
+  position: relative;
+  bottom: 15vh;
+  padding: 72px 0 48px;
+
+  @include mobile-portrait-up {
+    bottom: 30vh;
+  }
+
+  @include mobile-up {
+    padding: 0;
+  }
+
+}
+
+#contact {
+  min-height: 110vh;
+  position: relative;
+  bottom: 20vh;
+  padding: 72px 0 48px;
+
+  @include mobile-portrait-up {
+    bottom: 40vh;
+  }
+
+  @include mobile-up {
+    padding: 72px 0 0;
+  }
+
+  h2 {
+    margin: 0 0 16px;
+
     @include m-tablet-up {
-      margin: 0 0 8px;
+      margin: 0 0 24px;
     }
+  }
+
+  p {
+    margin: 8px 0;
   }
 
   a.button {
-    margin: 8px 0;
-    @include m-tablet-up {
-      margin: 16px 0;
-    }
+    margin: 16px 0;
   }
 
-  & a.flex-50 {
-    border: 1px solid #dddddd;
-    border-radius: $global-radius;
-    margin-right: 0;
+  .contact-container {
+    max-width: 550px;
+  }
 
-    img {
-      width: 100%;
-      height: auto;
-      max-height: 224px;
-      object-fit: cover;
-      border-radius: $global-radius;
-
-      @include mobile-landscape {
-        max-height: 160px;
-      }
-
-      @include mobile-up {
-        max-height: 300px;
-      }
-
-      @include desktop {
-        max-height: 360px;
-      }
-    }
-
-    @include mobile-portrait-up {
-      margin-right: 24px;
-    }
+  #contact-form {
+    margin: 24px 0 0;
 
     @include m-tablet-up {
-      margin-right: 32px;
+      margin: 32px 0 0;
+    }
+
+    input {
+      height: 36px;
+      border: 1px solid #dddddd;
+      border-radius: 4px;
+      width: 100%;
+      text-indent: 12px;
+      font-size: 16px;
+      line-height: 24px;
+      margin-bottom: 24px;
+    }
+
+    textarea {
+      @extend input;
+      height: 72px;
+      padding: 6px 0;
+    }
+
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: $gray-38;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: $gray-38;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+      color: $gray-38;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+      color: $gray-38;
     }
   }
 
