--- a/html/templates/process.html
+++ b/html/templates/process.html
@@ -1,7 +1,7 @@
-<section id="portfolio" class="column flex-center align-center white-bg">
+<section id="process" class="column flex-center align-center gray-bg">
   <div class="container slider-container">
     <h2>UX Portfolio</h2>
-    <div class="portfolio-slider" data-slideout-ignore>
+    <div class="process-slider" data-slideout-ignore>
       <ul>
 
         <li>
@@ -24,6 +24,19 @@
             </a>
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Healfies</h3>
+              <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
+              <a href="#" class="button flat">Open project</a>
+            </article>
+          </section>
+        </li>
+
+        <li>
+          <section class="row mobile-column space-between align-start">
+            <a href="#" class="flex-50 mobile-flex-1">
+              <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+            </a>
+            <article class="flex-50 mobile-flex-1 column align-start">
+              <h3>Spinver</h3>
               <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
               <a href="#" class="button flat">Open project</a>
             </article>
