--- a/html/templates/header.html
+++ b/html/templates/header.html
@@ -29,13 +29,13 @@
     </ul>
     <ul class="menu">
       <li>
-        <a class="mdi mdi-behance mdi-24px social-item" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance"></a>
+        <a class="mdi mdi-behance mdi-24px social-item" href="https://behance.net/raonicaselli" alt="Raoni Caselli on Behance" target="_blank"></a>
       </li>
       <li>
-        <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin"></a>
+        <a class="mdi mdi-linkedin mdi-24px social-item" href="https://www.linkedin.com/in/raoni-caselli-09a82a2b/" alt="Raoni Caselli on Linkedin" target="_blank"></a>
       </li>
       <li>
-        <a class="mdi mdi-medium mdi-24px social-item last-menu-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium"></a>
+        <a class="mdi mdi-medium mdi-24px social-item last-menu-item" href="https://medium.com/@raonicaselli" alt="Raoni Caselli on Medium" target="_blank"></a>
       </li>
     </ul>
   </nav>
