--- a/html/templates/about.html
+++ b/html/templates/about.html
@@ -17,7 +17,7 @@
     </header>
     <section class="row">
       <article class="column align-start flex-75 mobile-flex-1">
-        <p>I’m a UX Designer crazy about new technologies and creating friendly and easy to use interfaces. I love to go surfing early in the morning to start my day replenished and ready for the challenges that comes up. I am married to Luísa, a psychologist who is always teaching me new things about feelings and behaviours and we have a son, Dante, a curious and active baby that is showing me a different side of life.</p>
+        <p>I’m a UX Designer crazy about new technologies and creating friendly and easy to use interfaces. I love to go surfing early in the morning to start my day replenished and ready for the challenges that comes up. I am married to Luísa, a psychologist who is always teaching me new things about feelings and behaviours and we have a son, Dante, my happy baby that is showing me a different side of life.</p>
         <p>I want to find an amazing company that values me as a human being and can help me grow as a UX Designer. I’m looking for a mature design team where I can learn and improve my skills.</p>
         <a href="#" class="button flat">Download resume</a>
       </article>
