--- a/html/templates/portfolio.html
+++ b/html/templates/portfolio.html
@@ -12,7 +12,7 @@
             <article class="flex-50 mobile-flex-1 column align-start">
               <h3>Dolphin Surf App</h3>
               <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-              <a href="#" class="button flat">Open project</a>
+              <a id="open-dolphin" class="button flat">Open project</a>
             </article>
           </section>
         </li>
