--- a/html/templates/process.html
+++ b/html/templates/process.html
@@ -1,6 +1,6 @@
 <section id="process" class="column flex-center align-center gray-bg">
   <div class="container slider-container">
-    <h2>UX Portfolio</h2>
+    <h2>Design Process</h2>
     <div class="process-slider" data-slideout-ignore>
       <ul>
 
