--- a/css/sass/base/_main.scss
+++ b/css/sass/base/_main.scss
@@ -7,6 +7,10 @@ html {
 	min-height: 100%;
 }
 
+html.noscroll{
+  overflow: hidden;
+}
+
 main {
   height: 520vh;
 }
@@ -260,7 +264,7 @@ main {
     margin: 24px 0 16px;
 
     a.button {
-      padding: 6px;
+      padding: 5px;
       margin: 0 16px 0 0;
     }
 
@@ -365,7 +369,17 @@ main {
       margin: 32px 0 0;
     }
 
+    label {
+      p {
+        color: $gray-54;
+      }
+      &.active p {
+        color: $brand-secondary;
+      }
+    }
+
     input {
+      @include box-border;
       height: 36px;
       border: 1px solid #dddddd;
       border-radius: 4px;
@@ -374,6 +388,11 @@ main {
       font-size: 16px;
       line-height: 24px;
       margin-bottom: 24px;
+
+      &:focus {
+        outline: none !important;
+        border: 2px solid $brand-secondary;
+      }
     }
 
     textarea {
@@ -396,4 +415,163 @@ main {
     }
   }
 
+}
+
+#project-page {
+
+  .section-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: $white;
+    z-index: 9999;
+
+    @include mobile-portrait {
+      height: inherit;
+    }
+
+    &.visible {
+      animation: blend 400ms 1;
+    }
+
+    @keyframes blend {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
+    &.invisible {
+      animation: blackout 400ms 1;
+    }
+
+    @keyframes blackout {
+      0% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+      }
+    }
+
+    .unslider {
+      @include box-border;
+      @extend .column;
+      @extend .flex-center;
+      @extend .align-center;
+      position: relative;
+      height: 100vh;
+      padding: 32px;
+
+      @include mobile-portrait {
+        height: 350px;
+        padding: 0;
+        margin-top: 56px;
+
+        .unslider-horizontal {
+          border-bottom: 1px solid $gray-12;
+          border-top: 1px solid $gray-12;
+        }
+      }
+
+      .slider-arrow {
+        top: calc(50% - 64px);
+
+        @include mobile-portrait {
+          display: none;
+        }
+
+        &.next {
+          right: 0 !important;
+        }
+        &.prev {
+          left: 0 !important;
+        }
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+      }
+    }
+
+    .project-images {
+      background-color: #f5f5f5;
+
+      @include mobile-portrait {
+        background-color: $white;
+      }
+    }
+
+    .project-content {
+      overflow: scroll;
+      margin-top: 56px;
+      padding-top: 48px;
+
+      @include mobile-portrait {
+        margin-top: 32px;
+        padding-top: 0;
+      }
+
+      h2 {
+        margin: 0 0 8px;
+      }
+
+      h3 {
+        margin: 32px 0 16px;
+      }
+
+      p {
+        margin-top: 16px 0;
+      }
+
+      .social-items {
+        a {
+          padding: 5px;
+          margin: 0 16px 0 0 ;
+          width: 38px;
+        }
+        span {
+          @include s-body;
+          @include regular;
+          padding: 8px 16px 8px 0;
+          color: $gray-54;
+        }
+      }
+    }
+  }
+
+  .back-row {
+    position: fixed;
+    left: 50%;
+    width: 50%;
+    background-color: $white;
+
+    @include mobile-portrait {
+      left: 0;
+      width: 100%;
+      background-color: #f5f5f5;
+    }
+
+    .close-button {
+      @include box-border;
+      height: 56px;
+      padding: 16px 0;
+      color: $gray-54;
+
+      &:before {
+        margin-right: 8px;
+      }
+
+      span {
+        position: relative;
+        bottom: 3px;
+      }
+    }
+  }
 }
