--- a/html/templates/contact.html
+++ b/html/templates/contact.html
@@ -4,11 +4,11 @@
         <p>Want to hire me as a UX Designer for your company or alocated in a specific project? Leave me a message below so we can drink a beer and have a good talk about it.</p>
         <form id="contact-form" class="column align-start">
             <label for="cname"><p>Name</p></label>
-            <input required name="name" id="cname" type="text" placeholder="Your first name is fine" />
+            <input class="input" required name="name" id="cname" type="text" placeholder="Your first name is fine" />
             <label for="cemail"><p>Email</p></label>
-            <input required name="email" id="cemail" type="email" placeholder="Personal or company email" />
+            <input class="input" required name="email" id="cemail" type="email" placeholder="Personal or company email" />
             <label for="cmessage"><p>Message</p></label>
-            <textarea required name="message" id="cmessage" rows="3" placeholder="What do you want to ask me?"></textarea>
+            <textarea class="input" required name="message" id="cmessage" rows="3" placeholder="What do you want to ask me?"></textarea>
             <a class="button flat">Send message</a>
         </form>
     </article>
