--- a/html/templates/process.html
+++ b/html/templates/process.html
@@ -5,40 +5,27 @@
       <ul>
 
         <li>
-          <section class="row mobile-column space-between align-start">
-            <a href="#" class="flex-50 mobile-flex-1">
-              <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+          <section class="column flex-center align-center">
+            <a href="./img/ux_process.png" target="_blank" class="img-wrapper column flex-center">
+              <img src="./img/ux_process.png" alt="Full UX Process" class="portfolio-cover" />
             </a>
-            <article class="flex-50 mobile-flex-1 column align-start">
-              <h3>Dolphin Surf App</h3>
-              <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-              <a href="#" class="button flat">Open project</a>
+            <article class="column align-start">
+              <h3>User-centered Design</h3>
+              <p>This is the entire process I've been following in the last 2 years. It's based on the UCD methodology and it uses Design Thinking and Lean UX for different stages of the process</p>
+              <a href="https://docs.google.com/spreadsheets/d/1UdMUyApmVXzIVa8aWCdhNGpnz65aJYs10ch0PuY1yb8/edit?usp=sharing" class="link flat" target="_blank">More info (in pt-br only)</a>
             </article>
           </section>
         </li>
 
         <li>
-          <section class="row mobile-column space-between align-start">
-            <a href="#" class="flex-50 mobile-flex-1">
-              <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+          <section class="column flex-center align-center">
+            <a href="./img/problem_framing.png" target="_blank" class="img-wrapper column flex-center">
+              <img src="./img/problem_framing.png" alt="Problem framing" class="portfolio-cover" />
             </a>
-            <article class="flex-50 mobile-flex-1 column align-start">
-              <h3>Healfies</h3>
-              <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-              <a href="#" class="button flat">Open project</a>
-            </article>
-          </section>
-        </li>
-
-        <li>
-          <section class="row mobile-column space-between align-start">
-            <a href="#" class="flex-50 mobile-flex-1">
-              <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
-            </a>
-            <article class="flex-50 mobile-flex-1 column align-start">
-              <h3>Spinver</h3>
-              <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-              <a href="#" class="button flat">Open project</a>
+            <article class="column align-start">
+              <h3>Problem framing</h3>
+              <p>First we have to understand really well the problem, who are the impacted actors, what are the difficulties around this problem, how is the current user experience and if it's a problem that really deserves to be solved</p>
+              <a href="https://docs.google.com/presentation/d/1wN5MsY5VpTWbtCHpejFolEXt3PIW1uUYkoMBJlIfh4c/edit?usp=sharing" class="link flat" target="_blank">More info (in pt-br only)</a>
             </article>
           </section>
         </li>
