--- a/css/sass/base/_grid.scss
+++ b/css/sass/base/_grid.scss
@@ -50,6 +50,15 @@
   flex: 0.75;
 }
 
+.flex-100 {
+  -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-flex: 1;         /* OLD - Firefox 19- */
+  width: 100%;                  /* For old syntax, otherwise collapses. */
+  -webkit-flex: 1;          /* Chrome */
+  -ms-flex: 1;              /* IE 10 */
+  flex: 1;
+}
+
 .mobile-flex-1 {
   @include mobile-down {
     -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
