--- a/html/templates/contact.html
+++ b/html/templates/contact.html
@@ -9,7 +9,7 @@
             <input class="input" required name="email" id="cemail" type="email" placeholder="Personal or company email" />
             <label for="cmessage"><p>Message</p></label>
             <textarea class="input" required name="message" id="cmessage" rows="3" placeholder="What do you want to ask me?"></textarea>
-            <a class="button flat">Send message</a>
+            <button type="submit" class="button">Send message</button>
         </form>
     </article>
 </section>
